--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,9 +6,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:orientation="vertical"
-    android:weightSum="3"
     tools:context=".MainActivity">
-
 
     <WebView
         android:id="@+id/shop_web_view"
@@ -16,7 +14,6 @@
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="30dp"
-        android:layout_weight="3"
         android:fitsSystemWindows="true" />
 
     <com.google.android.gms.ads.AdView
@@ -27,5 +24,5 @@
         android:layout_centerHorizontal="true"
         android:background="#00000000"
         app:adSize="BANNER"
-        app:adUnitId="ca-app-pub-3940256099942544/6300978111"></com.google.android.gms.ads.AdView>
+        app:adUnitId="ca-app-pub-2981423664535117/3754105690" />
 </RelativeLayout>
